fix jdk (#203)